--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ header {
 }
 
 .HeadIcon {
+    margin-top: 4px;
     width: 50px;
     height: 50px;
 }
@@ -73,7 +74,7 @@ header {
 }
 
 .UserIcon {
-    margin-left: 15px;
+    margin-left: 18px;
     width: 35px;
     height: 35px;
 }
@@ -89,4 +90,8 @@ header {
 
 .FindText {
     color: var(--DarkLight);
+}
+.SearchLabel {
+    color: var(--DarkLight);
+    font-size: 10px;
 }
