--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,17 @@
+
+
 :root {
-    --light:#F5F5F5;
-    --bitLight:#D6E6F2;
-    --DarkLight:#303841;
+    --light: #F5F5F5;
+    --bitLight: #D6E6F2;
+    --DarkLight: #303841;
 
 }
+
+.Facicon {
+    width: 16px;
+    height: 16px;
+}
+
 
 body {
     margin: 0;
@@ -13,7 +21,7 @@ body {
 header {
     width: 100%;
     height: 80px;
-    background-color:  var(--DarkLight);
+    background-color: var(--DarkLight);
 }
 
 .HeaderMain {
@@ -26,7 +34,7 @@ header {
 
 .leftSide {
     display: flex;
-    
+
 }
 
 .HeadIcon {
@@ -38,15 +46,16 @@ header {
 .Heading {
     margin-left: 15px;
     margin-top: 8px;
-    color:var(--light);
+    color: var(--light);
 }
 
 .SavedTag {
-   width: 20px;
-   height: 20px;
-   filter: brightness(90%) invert(90%);
+    width: 20px;
+    height: 20px;
+    filter: brightness(90%) invert(90%);
 }
-.RtSide{
+
+.RtSide {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -68,7 +77,7 @@ header {
     font-size: 20px;
 }
 
-.LoginBTN a:hover  {
+.LoginBTN a:hover {
     text-decoration: none;
     color: black;
 }
@@ -81,17 +90,47 @@ header {
 
 
 
+
+
+
 .SearchSection {
     background-color: var(--light);
     width: 100%;
-    height: 100px;
+    height: 240px;
     padding-top: 10px;
 }
 
 .FindText {
     color: var(--DarkLight);
 }
+
+.RowSearch {
+    display: flex;
+    justify-content: space-around;
+    top: 20px;
+}
+
+.BranchSearchDiv {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin: 20px;
+}
+
+
 .SearchLabel {
     color: var(--DarkLight);
     font-size: 10px;
+}
+
+#Branch {
+    width: 90%;
+    border: 1px var(--DarkLight) solid;
+    border-radius: 10px;
+    padding: 5px;
+    color: var(--DarkLight);
+}
+
+.custom-select option {
+    border-radius: 10px;
 }
