--- a/styles.css
+++ b/styles.css
@@ -163,9 +163,9 @@ header {
 .VideoRow {
     margin: 0px 5px;
     width: 98%;
-    height: 185px;
+    height: 250px;
     background-color: var(--Light);
-    border: 1px solid var(--DarkLight);
+    /* border: 1px solid var(--DarkLight); */
     color: var(--DarkLight);
     border-radius: 10px;
     display: flex;
@@ -174,7 +174,7 @@ header {
     overflow-y: hidden;
 }
 
-@keyframes scroll {
+/* @keyframes scroll {
     100% {
         transform: translateX(0);
     }
@@ -182,14 +182,22 @@ header {
     100% {
         transform: translateX(-100%);
     }
+} */
+
+.VideoClass {
+    border-radius: 10px;
+    height: 240px;
+    aspect-ratio: 16/13;
+    z-index: 2;
 }
 
-.OneVideo .VideoClass {
+.OneVideo {
     margin: 1px 5px;
-    border-radius: 10px;
-    height: 167px;
-    aspect-ratio: 16/9;
-    animation: scroll 5s ease-in-out normal;
+    /* border-radius: 10px; */
+    /* height: 240px; */
+    /* aspect-ratio: 16/9; */
+    /* background-color: #303841; */
+    animation: scroll 10s ease-in-out both;
 
 }
 
@@ -211,14 +219,33 @@ header {
 
 }
 
+.VideoHeadSec {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .addVideo {
-    width: 140px;
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: end;
     margin: 0px 30px;
-    flex-direction: column;
+    flex-direction: row;
+    background-color: none;
+}
+
+.MoreVideo {
+    margin-top: 10px;
+    align-items: center;
+}
+
+.addText {
+    font-size: 20px;
+    font-weight: 600;
+    color: var(--DarkLight);
+    margin-top: 15px;
+    margin-right: 10px;
 }
 
 .addVideo:hover,
@@ -228,28 +255,41 @@ header {
 
 .Load,
 .Add {
-    margin: 0px 40px;
-    width: 80px;
+    width: 30px;
     aspect-ratio: 1/1;
 }
 
-.LoadText, .ShowLessText {
+.LoadText,
+.ShowLessText {
     font-size: 10px;
     color: red;
 }
 
+.LoadText {
+    margin-top: 5px;
+    margin-right: 5px;
+}
+
+.lessLoad {
+    transform: rotate(180deg);
+}
+
 .showLessDiv {
+    display: none;
+    width: 100%;
     margin: 5px 10px;
 }
 
 .videoGrid {
     display: none;
+    height: 80vh;
+    overflow: auto;
+    overflow-x: hidden;
 }
 
 .OneVideoGrid {
     margin: 0px 5px;
-    flex-wrap: wrap;
-    justify-content: center;
+    float: left;
 }
 
 .OneVideoGrid .VideoClass {
@@ -257,4 +297,16 @@ header {
     border-radius: 10px;
     height: 167px;
     aspect-ratio: 16/9;
+}
+
+.GridVideo {
+    display: block;
+}
+
+.EGBOX {
+    width: 10px;
+    height: 50px;
+    background-color: red;
+    margin: 10px;
+    float: left;
 }
