--- a/styles.css
+++ b/styles.css
@@ -325,8 +325,8 @@ header {
 
 .NotesOne,
 .Q_POne {
-    width: 240px;
-    height: 240px;
+    width: 50%;
+    height: 50%;
     /* background-color: var(--DarkLight); */
     margin: 10px;
     float: left;
@@ -371,39 +371,69 @@ header {
 
 /* popup login */
 /* Popup container - can be customized */
-.form-popup {
+
+.Fullpage,
+.SignupFullPage {
+    width: 100%;
+    height: 100%;
     display: none;
+    z-index: 6;
     position: fixed;
-    bottom: 0;
-    right: 15px;
-    border: 3px solid #f1f1f1;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(128, 128, 128, 0.395);
+    /* filter: blur(5px); */
+    backdrop-filter: blur(15px);
+}
+
+.form-popup {
+    display: flex;
+    position: fixed;
+    /* left: 500%;
+    top: 25%; */
+    align-items: center;
+    justify-content: center;
+    border: 3px solid var(--bitLight);
+    border-radius: 20px;
     z-index: 9;
-  }
-  
-  /* Add styles to the form container */
-  .form-container {
-    max-width: 300px;
+    margin: 20vh 20rem;
+}
+
+/* Add styles to the form container */
+.form-container {
+    /* width: 300px; */
+    min-width: 300px;
     padding: 20px;
-    background-color: #f1f1f1;
-  }
-  
-  /* Full-width input fields */
-  .form-container input[type=text], .form-container input[type=password] {
+    background-color: var(--DarkLight);
+    border-radius: 20px;
+}
+
+.loginHeadText,
+label {
+    color: var(--bitLight);
+}
+
+/* Full-width input fields */
+.form-container input[type=text],
+.form-container input[type=password],
+.form-container input[type=number],
+.form-container input[type=email] {
     width: 100%;
     padding: 15px;
     margin: 5px 0 15px 0;
     border: none;
     background: #fff;
-  }
-  
-  /* When the inputs get focus, change their background color */
-  .form-container input[type=text]:focus, .form-container input[type=password]:focus {
+}
+
+/* When the inputs get focus, change their background color */
+.form-container input[type=text]:focus,
+.form-container input[type=password]:focus {
     background-color: #ddd;
     outline: none;
-  }
-  
-  /* Set a style for the submit/login button */
-  .form-container .btn {
+}
+
+/* Set a style for the submit/login button */
+.form-container .btn {
     background-color: #4CAF50;
     color: #fff;
     padding: 15px 20px;
@@ -412,15 +442,29 @@ header {
     width: 100%;
     margin-bottom: 10px;
     opacity: 0.8;
-  }
-  
-  /* Add a red background color to the cancel button */
-  .form-container .cancel {
+    font-weight: 700;
+    font-size: 20px;
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
     background-color: red;
-  }
-  
-  /* Add some hover effects to buttons */
-  .form-container .btn:hover, .open-button:hover {
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover,
+.open-button:hover {
     opacity: 1;
-  }
-  
+}
+
+.LoginHead {
+    display: flex;
+    justify-content: space-between;
+}
+
+.CloseButtonLogin {
+    width: 30px;
+    height: 30px;
+    /* border: 3px solid var(--bitLight); */
+
+}
