this commit will enable the role of adding notes,qp,and videos to admins.

--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ header {
 }
 
 .UserIcon {
+    display: flex;
     margin-left: 18px;
     width: 35px;
     height: 35px;
@@ -486,3 +487,7 @@ label {
     /* border: 3px solid var(--bitLight); */
 
 } 
+
+.addVideo, .addQ_P{
+    display: none;
+}
